# smartfarm

./: main.c
Travail a faire/: Makefile  animaux.c  animaux.h  animaux.txt  main.c  prog
project4/src/: Makefile  Makefile.am  Makefile.in  animaux.c  animaux.h  callbacks.c  callbacks.h  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  project4
src/: Makefile  Makefile.am  Makefile.in  achrefcapteur.c  achrefcapteur.h  animaux.c  animaux.h  callbacks.c  callbacks.h  capteur.c  capteur.h  client.c  client.h  equipement.c  equipement.h  func.c  func.h  interface.c.bak  interface.h.bak  plante.c  plante.h  project4  treeveiw.c  treeveiw.h  treeview.c  treeview.h  verif.c  verif.h  ztreeview.c  ztreeview.h  zverif.c  zverif.h
travail_a_faire/: animaux.txt  prog
